
################################################################################
##                                                                            ##
##  This file is part of NCrystal (see https://mctools.github.io/ncrystal/)   ##
##                                                                            ##
##  Copyright 2015-2025 NCrystal developers                                   ##
##                                                                            ##
##  Licensed under the Apache License, Version 2.0 (the "License");           ##
##  you may not use this file except in compliance with the License.          ##
##  You may obtain a copy of the License at                                   ##
##                                                                            ##
##      http://www.apache.org/licenses/LICENSE-2.0                            ##
##                                                                            ##
##  Unless required by applicable law or agreed to in writing, software       ##
##  distributed under the License is distributed on an "AS IS" BASIS,         ##
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ##
##  See the License for the specific language governing permissions and       ##
##  limitations under the License.                                            ##
##                                                                            ##
################################################################################

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ncrystal"
version = "4.1.8"
requires-python = ">=3.8"
dependencies = [ 'ncrystal-core==4.1.8', 'ncrystal-python==4.1.8' ]
authors = [
  { name="NCrystal developers (Thomas Kittelmann, Xiao Xiao Cai)" },
]
description = "Library for thermal neutron transport in crystals and other materials."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://mctools.github.io/ncrystal/"
"Bug Tracker" = "https://github.com/mctools/ncrystal/issues"

[project.optional-dependencies]
#NB: We pin ASE due to https://gitlab.com/ase/ase/-/issues/1597 breaking 3.24
composer = ['spglib>=2.1.0']
cif = ['ase<3.24.0', 'gemmi>=0.6.1', 'spglib>=2.1.0']
plot = ['matplotlib>=3.6.0']
all = ['ase<3.24.0', 'gemmi>=0.6.1', 'matplotlib>=3.6.0', 'spglib>=2.1.0']
devel = [ 'PyYAML>=6.0.0', 'ase<3.24.0', 'cppcheck', 'gemmi>=0.6.1',
          'matplotlib>=3.6.0', 'mpmath>=1.3.0', 'numpy>=1.22', 'ruff>=0.8.1',
          'simple-build-system>=1.6.0', 'spglib>=2.1.0',
          'tomli>=2.0.0; python_version < "3.11"', 'pybind11>=2.11.0' ]
