[project]
name = "ncrystal-pypluginmgr"
version = "0.0.2"
requires-python = ">=3.8"
dependencies = []
authors = [
  { name="NCrystal developers (Thomas Kittelmann, Xiao Xiao Cai)" },
]
description = "Plugin manager for NCrystal."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Unix",
]

[project.urls]
"Homepage" = "https://mctools.github.io/ncrystal/"
"Bug Tracker" = "https://github.com/mctools/ncrystal/issues"

[project.scripts]
ncrystal-pluginmanager = "_ncrystal_pypluginmgr.cli:main"

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["_ncrystal_pypluginmgr"]

