
################################################################################
##                                                                            ##
##  This file is part of NCrystal (see https://mctools.github.io/ncrystal/)   ##
##                                                                            ##
##  Copyright 2015-2025 NCrystal developers                                   ##
##                                                                            ##
##  Licensed under the Apache License, Version 2.0 (the "License");           ##
##  you may not use this file except in compliance with the License.          ##
##  You may obtain a copy of the License at                                   ##
##                                                                            ##
##      http://www.apache.org/licenses/LICENSE-2.0                            ##
##                                                                            ##
##  Unless required by applicable law or agreed to in writing, software       ##
##  distributed under the License is distributed on an "AS IS" BASIS,         ##
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  ##
##  See the License for the specific language governing permissions and       ##
##  limitations under the License.                                            ##
##                                                                            ##
################################################################################

[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "NCrystal.__version__"}

[project]
name = "ncrystal-python"
dynamic = [ 'version' ]
requires-python = ">=3.8"
dependencies = [ 'numpy>=1.22' ]
authors = [
  { name="NCrystal developers (Thomas Kittelmann, Xiao Xiao Cai)" },
]
description = "Library for thermal neutron transport in crystals and other materials."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]

[project.urls]
"Homepage" = "https://mctools.github.io/ncrystal/"
"Bug Tracker" = "https://github.com/mctools/ncrystal/issues"

[project.scripts]
nctool = "NCrystal._cli_nctool:main"
ncrystal_cif2ncmat = "NCrystal._cli_cif2ncmat:main"
ncrystal_endf2ncmat = "NCrystal._cli_endf2ncmat:main"
ncrystal_hfg2ncmat = "NCrystal._cli_hfg2ncmat:main"
ncrystal_mcstasunion = "NCrystal._cli_mcstasunion:main"
ncrystal_ncmat2cpp = "NCrystal._cli_ncmat2cpp:main"
ncrystal_ncmat2hkl = "NCrystal._cli_ncmat2hkl:main"
ncrystal_vdos2ncmat = "NCrystal._cli_vdos2ncmat:main"
ncrystal_verifyatompos = "NCrystal._cli_verifyatompos:main"
